# ai_forge

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile_AGENTS.md  Modelfile.cli  README.md  __init__.py  _agent_verifier_mps.py  _agent_verifier_ollama.py  _verifier_monkeypatch.py  _verify_system.py  docker-compose.yml  forge  pyproject.toml  pytest.ini  requirements.txt  run_ui_full.sh  test_modelfile
.github/: AGENTS.md
.github/workflows/: frontend-ci.yml  release.yml  tests.yml
antigravity_agent/: AGENTS.md  AGENTS.md.bak  __init__.py  prompts.py  repo_guardian.py  skills.yaml
antigravity_agent/artifacts_templates/: health_report.md.j2
conductor/: AGENTS.md  __init__.py  data_sources.py  job_queue.py  modelfile_template  ollama_manager.py  persistence.py  service.py  training_worker.py
config/: AGENTS.md  __init__.py  defaults.yaml  models.yaml  pissa_config.yaml
data_pipeline/: AGENTS.md  __init__.py  miner.py  raft_generator.py  validator.py
data_pipeline/schemas/: __init__.py  code_blocks.py  metrics.py  raft_examples.py
docs/: AGENTS.md  api_examples.md  api_reference.md  architecture.md  ci_cd.md  configuration.md  deployment.md  developer_guide.md  known_limitations.md  monitoring.md  ollama_integration.md  pissa_qlora_guide.md  production_checklist.md  repo_guardian.md  research_summary.md  sample_evaluation_report.md  sign_off_document.md  test_results_summary.md  troubleshooting.md  user_guide.md  validation_report.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vitest.config.ts  vitest.integration.config.ts
frontend/docs/: API.md  ARCHITECTURE.md  USER_GUIDE.md
frontend/e2e/: data-source-add.spec.ts  data-source-load.spec.ts  dataset-generate.spec.ts  fine-tune-job.spec.ts  fixtures.ts  job-creation-flow.spec.ts  mission-approval.spec.ts  navigation.spec.ts  system-audit.spec.ts  training-flow.spec.ts
frontend/playwright-report/: index.html
frontend/src/: App.tsx  index.css  main.tsx  setupTests.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/charts/: LossCurveChart.tsx  MetricsBarChart.tsx
frontend/src/components/layout/: PageHeader.tsx  PageLayout.tsx  PageLayout.tsx.bak  TopBar.tsx
frontend/src/components/ui/: Badge.test.tsx  Badge.tsx  (+24 more)
frontend/src/mocks/: browser.ts  handlers.ts  server.ts
frontend/src/types/: index.ts
frontend/src/utils/: constants.ts  formatters.ts  mock-data.ts  test-utils.tsx
judge/: AGENTS.md  __init__.py  evaluator.py  exporter.py  report.py
judge/benchmarks/: __init__.py
monitoring/: AGENTS.md  alertmanager.yml  alerts.yml  prometheus.yml
research doc/:  master_index.md  AGENTS.md  antigravity_prompts_sota.md  implementation_guide.md
scripts/: AGENTS.md  convert_hf_to_gguf.py  prepare_data.py
tests/: AGENTS.md  README.md  __init__.py  _agent_verifier_lora.py
tests/fixtures/: __init__.py
tests/fixtures/sample_python_repo/: main.py  utils.py
tests/integration/: __init__.py  test_full_system_e2e.py  test_ollama_manager.py  test_pipeline.py  test_repo_guardian.py  test_service.py
tests/manual/: test_deployment.py  test_epochs.py  test_inference.py  test_mps_fix.py  test_training_flow.py
tests/unit/: __init__.py  test_data_pipeline.py  test_evaluator.py  test_forge.py  test_miner.py  test_ollama_manager.py  test_raft_generator.py  test_training.py  test_validator.py
training/: AGENTS.md  __init__.py  forge.py  schemas.py
training/callbacks/: __init__.py  early_stopping.py  loss_plotter.py  memory_monitor.py  metrics_logger.py
training/losses/: __init__.py  dpo_loss.py  raft_loss.py
(+56 files in other folders)
